--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
 enableEmoji = true
 # Enable Disqus comments
-# disqusShortname = "yourdiscussshortname"
+disqusShortname = "srdan-geek-nz"
 
 [params]
 author = "Srđan Đukić"
