Disqus connects to a shitload of things
This is getting a bit ridiculous now.

Issue(s): None

--- a/config.toml
+++ b/config.toml
@@ -80,7 +80,7 @@ childsrc = ["'self'"]
 fontsrc = ["'self'", "https://fonts.gstatic.com", "https://cdn.jsdelivr.net/"]
 formaction = ["'self'"]
 framesrc = ["'self'", "https://disqus.com"]
-imgsrc = ["'self'", "https://www.gravatar.com", "https://referrer.disqus.com", "https://c.disquscdn.com"]
+imgsrc = ["'self'", "https://www.gravatar.com", "https://referrer.disqus.com", "https://c.disquscdn.com", "https://cdn.viglink.com"]
 objectsrc = ["'none'"]
 stylesrc = [
   "'self'",
@@ -92,7 +92,7 @@ stylesrc = [
 scriptsrc = ["'self'", "'unsafe-inline'", "https://www.google-analytics.com", "https://srdan-geek-nz.disqus.com", "https://c.disquscdn.com"]
 prefetchsrc = ["'self'", "https://c.disquscdn.com", "https://disqus.com"]
 # connect-src directive – defines valid targets for to XMLHttpRequest (AJAX), WebSockets or EventSource
-connectsrc = ["'self'", "https://www.google-analytics.com"]
+connectsrc = ["'self'", "https://www.google-analytics.com", "https://links.services.disqus.com"]
 
 [taxonomies]
 category = "categories"
