Update pagination config parameter name
Got the error message:

ERROR deprecated: site config key paginate was deprecated in Hugo
v0.128.0 and subsequently removed. Use pagination.pagerSize
instead.

So am updating the configuration accordingly.

Issue(s): None

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "Home of Srđan Đukić"
 theme = "coder"
 languageCode = "en"
 defaultContentLanguage = "en"
-paginate = 20
+pagination.pagerSize = 20
 pygmentsStyle = "bw"
 pygmentsCodeFences = true
 pygmentsCodeFencesGuessSyntax = true
