Add simple post-deploy test
After the deploy change, check that a web request returns a valid
HTTP status code.

Issue(s): None

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -34,3 +34,6 @@ jobs:
           publish_dir: ./public
           cname: srdan.geek.nz
 
+      - name: Test
+        uses: actions/checkout@v3
+        run: curl -s -o /dev/null -I -w "%{http_code}" https://srdan.geek.nz  
